@@ -1,0 +1,7 @@
+package URI::snowflake;
+use base 'URI::_odbc';
+our $VERSION = '0.19';
+
+sub default_port { 443 }
+
+1;
